@@ -28,14 +28,6 @@ sample/v:     [ a0      a1      ]
 0 : [ 10      13.3333 ]
 1 : [ 10.3333 13.6667 ]
 2 : [ 10.6667 14      ]
-sample*m:     [ a0  a1  ]
-0 : [ 110 290 ]
-1 : [ 113 298 ]
-2 : [ 116 306 ]
-sample/m:     [ a0  a1  ]
-0 : [ -70  50 ]
-1 : [ -73  52 ]
-2 : [ -76  54 ]
 sample+=t:     [ a0 a1 ]
 0 : [ 35 45 ]
 1 : [ 36 46 ]
@@ -57,14 +49,6 @@ sample*=v:     [ a0  a1  ]
 1 : [  93 123 ]
 2 : [  96 126 ]
 sample/=v:     [ a0 a1 ]
-0 : [ 30 40 ]
-1 : [ 31 41 ]
-2 : [ 32 42 ]
-sample*=m:     [ a0  a1  ]
-0 : [ 110 290 ]
-1 : [ 113 298 ]
-2 : [ 116 306 ]
-sample/=m:     [ a0 a1 ]
 0 : [ 30 40 ]
 1 : [ 31 41 ]
 2 : [ 32 42 ]
